--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Recipes</h1>
-    <ul>
-        <li><a href="recipes/biryani.html">Biryani</a>
-        <li><a href="recipes/HalfFriedEgg.html">Half Fried Eggs</a>
-        <li><a href="recipes/naan.html">Naan</a>
-      </ul>
-    
-test
+<h1>Recipes</h1>
+<ul class="ul">
+    <li class="biryani">
+        <a href="recipes/biryani.html">Biryani</a>
+        <p>Description of Biryani.</p>
+    </li>
+    <li class="half-fried-egg">
+        <a href="recipes/HalfFriedEgg.html">Half Fried Eggs</a>
+        <p>Description of Half Fried Eggs.</p>
+    </li>
+    <li class="naan">
+        <a href="recipes/naan.html">Naan</a>
+        <p>Description of Naan.</p>
+    </li>
+</ul>
 </body>
 </html>
